--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,7 +10,7 @@ jobs:
         python: [3.6, 3.7, 3.8, 3.9]
     steps:
     - name: Checkout
-      uses: PageRank
+      uses: actions/checkout@v2
 
     - name: setup-python ${{ matrix.python }}
       uses: ./
