--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,4 +22,4 @@ jobs:
     - run: echo 'start'
     - run: pip install hypothesis
     - run: pip install sympy
-    - run: python -m unittest discover
+   # - run: python -m unittest discover
